####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = qirc
  qirc_SOURCES =
  programcommand.cpp newtab.cpp MainTab.cpp notifyshowcase.cpp channellist.
  cpp dccget.cpp dccsend.cpp IServerSocket.cpp general.cpp listanicks.
  cpp qirc.cpp ventanas.cpp inputBox.cpp cuadroListaNicks.
  cpp cuadroConfiguracion.cpp cuadroConectarCon.cpp colamensajes.
  cpp IRCClient.cpp IClientSocket.cpp Config.cpp ChatView.cpp main.
  cpp qirc_LDADD = -lqt - lXext - lX11 $ (LIBSOCKET) SUBDIRS =
  docs EXTRA_DIST =
  main.cpp qirc.h ChatView.cpp ChatView.h Config.cpp Config.h IClientSocket.
  cpp IClientSocket.h IRCClient.cpp IRCClient.h IRCCodes.h colamensajes.
  cpp colamensajes.h cuadroConectarCon.cpp cuadroConectarCon.
  h cuadroConfiguracion.cpp cuadroConfiguracion.h cuadroListaNicks.
  cpp cuadroListaNicks.h inputBox.cpp inputBox.h ventanas.cpp ventanas.h qirc.
  cpp resource.h qirc16x16.xpm qirc32x32.xpm qirc64x64.xpm listanicks.
  cpp listanicks.h general.h general.cpp IServerSocket.cpp IServerSocket.
  h dccsend.cpp dccsend.h dccget.cpp dccget.h connect.xpm dccsend.xpm help.
  xpm connectto.xpm disconnect.xpm join.xpm part.xpm list.xpm channellist.
  cpp channellist.h notifyshowcase.cpp notifyshowcase.h offline.xpm online.
  xpm operator.xpm justconn.xpm MainTab.cpp MainTab.h newtab.cpp newtab.
  h leftArrowDisabled.xpm leftArrowEnabled.xpm rightArrowDisabled.
  xpm rightArrowEnabled.xpm tabLeft.xpm tabMiddle.xpm tabRight.xpm tabClose.
  xpm programcommand.cpp programcommand.h
####### kdevelop will overwrite this part!!! (end)############
#set the include path for X, qt and KDE
  INCLUDES = $ (all_includes)
#claim, which subdirectories you want to install
#you can add here more. This one gets installed
  bin_PROGRAMS = qirc qirc_METASOURCES = USE_AUTOMOC
#the library search path.
  qirc_LDFLAGS = $ (all_libraries)
#them while "make clean", use CLEANFILES
  DISTCLEANFILES = $ (qirc_METASOURCES)
